--- a/source/DotNetAppSqlDb/Views/Shared/_Layout.cshtml
+++ b/source/DotNetAppSqlDb/Views/Shared/_Layout.cshtml
@@ -29,7 +29,9 @@
                         <div class="dropdown-menu" data-bs-popper="none">
                             <a class="dropdown-item" href='@Url.Action("KnowYourRights")'>Know Your Rights</a>
                             <a class="dropdown-item" href='@Url.Action("SelfDefense")'>Self Defense</a>
-                            <a class="dropdown-item" href="#">Self Learning</a>
+                            <a class="dropdown-item" href='@Url.Action("SelfLearning")'>Self Learning</a>
+                            <a class="dropdown-item" href='@Url.Action("JobOpportunities")'>Job Opportunities</a>
+                            <a class="dropdown-item" href='@Url.Action("SuccessStories")'>Success Stories</a>
                         </div>
                     </li>
                     <li class="nav-item">
