--- a/source/DotNetAppSqlDb/Views/Todos/Index.cshtml
+++ b/source/DotNetAppSqlDb/Views/Todos/Index.cshtml
@@ -23,12 +23,12 @@
     </button>
     <br>
 
-    <button type="button" class="btn btn-lg btn-primary" style="width: 50%; margin-bottom: 30px" onclick="location.href='@Url.Action("Create")';return false;">
+    <button type="button" class="btn btn-lg btn-primary" style="width: 50%; margin-bottom: 30px" onclick="location.href='@Url.Action("SelfLearning")';return false;">
         <h5>Self Learning</h5>
     </button>
     <br>
 
-    <button type="button" class="btn btn-lg btn-primary" style="width: 50%; margin-bottom: 30px" onclick="location.href='@Url.Action("Create")';return false;">
+    <button type="button" class="btn btn-lg btn-primary" style="width: 50%; margin-bottom: 30px" onclick="location.href='@Url.Action("JobOpportunities")';return false;">
         <h5>Job Opportunities</h5>
     </button>
     <br>
