added Language translator

--- a/source/DotNetAppSqlDb/Views/Todos/Index.cshtml
+++ b/source/DotNetAppSqlDb/Views/Todos/Index.cshtml
@@ -4,9 +4,12 @@
     ViewBag.Title = "Index";
 }
 
+<!DOCTYPE html>
+
+
 <div style="text-align: center;">
     <br>
-    <h1>Welcome to Next Women! </h1>
+    <h2>Welcome to Next Women! </h2>
     <br>
     <h4><i>"Our vision is to create next generation women who are aware of thier rights, are self-sufficient to protect themself and aims to be finalcially independent" </i></h4>
     <br><br>
@@ -39,34 +42,35 @@
     <br>
 </div>
 
+
 @*<table class="table">
 
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
         <tr>
-            <td>
-
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedDate)
+            </th>
+            <th></th>
         </tr>
-    }
 
-</table>*@
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedDate)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>
+            </tr>
+        }
+
+    </table>*@
