--- a/source/DotNetAppSqlDb/Views/Todos/SelfLearning.cshtml
+++ b/source/DotNetAppSqlDb/Views/Todos/SelfLearning.cshtml
@@ -15,6 +15,36 @@
     </i>
 </h5>
 
+<h4 style="text-align: center;">Self Learning Portals</h4>
+<br />
+<button type="button" class="btn btn-outline-light" onclick="location.href='https://gramswaraj.nirdpr.in/'">
+    <h5>GramSwaraj E-learning Platform</h5>
+</button>
+<br>
 
+<button type="button" class="btn btn-outline-light" onclick="location.href='https://portal.trainingcentre.unwomen.org/unw-catalog-mobile/'">
+    <h5>UN Women Training Center</h5>
+</button>
+<br>
+
+<button type="button" class="btn btn-outline-light" onclick="location.href='https://www.upgrad.com/'">
+    <h5>Upgrad Learning Platform</h5>
+</button>
+<br>
+
+<button type="button" class="btn btn-outline-light" onclick="location.href='https://www.coursera.org/in'">
+    <h5>Coursera</h5>
+</button>
+<br>
+
+<button type="button" class="btn btn-outline-light" onclick="location.href='https://www.udemy.com/'">
+    <h5>Udemy</h5>
+</button>
+<br>
+
+<button type="button" class="btn btn-outline-light" onclick="location.href=https://www.edx.org/'">
+    <h5>Edx</h5>
+</button>
+<br>
 
 
