--- a/source/DotNetAppSqlDb/Views/Shared/_Layout.cshtml
+++ b/source/DotNetAppSqlDb/Views/Shared/_Layout.cshtml
@@ -35,13 +35,12 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href='@Url.Action("AboutUs")'>About Us</a>
                     </li>
-
+                  
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    <div class="nav-item dropdown" id="google_translate_element"></div>
                 </form>
             </div>
         </div>
@@ -59,7 +58,13 @@
         </footer>
     </div>
 
+    <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+    </script>
 
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
