Publish on Azure Web Service

--- a/source/DotNetAppSqlDb/Views/Todos/AboutUs.cshtml
+++ b/source/DotNetAppSqlDb/Views/Todos/AboutUs.cshtml
@@ -36,7 +36,7 @@
     </div>
     <h4 style="text-align: center;"><i>"Our vision is to create next generation women who are aware of thier rights, 
         are self-sufficient to protect themself and wants to be finalcially independent. 
-        We aim to provide necessary resources required to achive these goals. This " </i></h4>
+        We aim to provide necessary resources required to achive these goals. " </i></h4>
     <script>
         let slideIndex = 0;
         showSlides();
