--- a/source/DotNetAppSqlDb/Views/TodosDone/Index.cshtml
+++ b/source/DotNetAppSqlDb/Views/TodosDone/Index.cshtml
@@ -12,13 +12,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Story)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CreatedDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Done)
         </th>
         <th></th>
     </tr>
