--- a/source/DotNetAppSqlDb/Views/Todos/Details.cshtml
+++ b/source/DotNetAppSqlDb/Views/Todos/Details.cshtml
@@ -10,11 +10,20 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Title)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Story)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Story)
         </dd>
 
         <dt>
