Edited Readme files

--- a/source/DotNetAppSqlDb/Views/Todos/Index.cshtml
+++ b/source/DotNetAppSqlDb/Views/Todos/Index.cshtml
@@ -10,7 +10,7 @@
     <br>
     <h2>Welcome to Next Women! </h2>
     <br>
-    <h4><i>"Our vision is to create next generation women who are aware of thier rights, are self-sufficient to protect themself and aims to be finalcially independent" </i></h4>
+    <h4><i>"Our vision is to create next generation women who are aware of their rights, are self-sufficient to protect themselves  and aims to be financially independent" </i></h4>
     <br><br>
 </div>
 
