--- a/source/DotNetAppSqlDb/Views/Todos/KnowYourRights.cshtml
+++ b/source/DotNetAppSqlDb/Views/Todos/KnowYourRights.cshtml
@@ -11,7 +11,7 @@
 <br>
 <h5 style="text-align: center;">
     <i>
-        "Next Women provides you with quick guide to women empowerment schemes provided by the goverment of India to give you a comprehensive understanding of various operational schemes.
+        "Next Women provides you with quick guide to women empowerment schemes provided by the government of India to give you a comprehensive understanding of various operational schemes.
         It focuses on the women awareness, safety, social dignity and ensure ways of earning."
     </i>
 </h5>
